updating new branch

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             alt="Humber College">
             <figcaption>The Barrett Center for Technology and Innovation building at Humber College North Campus</figcaption>
         </figure>
+        <h2> New Changes in new branch</h2>
+        <figure>
+            <p><img src="humber.jpg" 
+            alt="Humber College">
+            <figcaption>The Barrett Center for Technology and Innovation building at Humber College North Campus</figcaption>
+        </figure>
 
 
 <script src="Car.js"></script>
